--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <properties>
     <android-version>2.3.3</android-version>
     <android-api-level>10</android-api-level>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -49,8 +50,8 @@
       <plugins>
         <plugin>
           <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-          <artifactId>maven-android-plugin</artifactId>
-          <version>2.8.3</version>
+          <artifactId>android-maven-plugin</artifactId>
+          <version>3.0.0-alpha-13</version>
           <extensions>true</extensions>
           <executions>
             <execution>
