--- a/solshen-install-history/AndroidManifest.xml
+++ b/solshen-install-history/AndroidManifest.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.solshen.install.history"
-  android:versionCode="1"
-  android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.solshen.install.history"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-  <uses-sdk
-    android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="10" />
 
-  <supports-screens
-    android:largeScreens="true"
-    android:normalScreens="true"
-    android:smallScreens="false"
-    android:xlargeScreens="true" />
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="false"
+        android:xlargeScreens="true" />
 
-  <application
-    android:icon="@drawable/icon"
-    android:label="@string/app_name">
-    <activity
-      android:name=".InstallHistoryActivity"
-      android:label="@string/app_name">
-      <intent-filter>
-        <action
-          android:name="android.intent.action.MAIN" />
-        <category
-          android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-    <provider android:name=".db.HistoryProvider"
-              android:authorities="com.solshen.history"
-              android:exported="false"
-              android:label="@string/history_provider"
-              android:syncable="false" />
-  </application>
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity
+            android:label="@string/app_name"
+            android:name=".InstallHistoryActivity" >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <provider
+            android:authorities="com.solshen.history"
+            android:exported="false"
+            android:label="@string/history_provider"
+            android:name=".db.HistoryProvider"
+            android:syncable="false" />
+
+        <receiver android:name="PackageActionReceiver" >
+            <intent-filter >
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_CHANGED" />
+                <action android:name="android.intent.action.PACKAGE_DATA_CLEARED" />
+                <action android:name="android.intent.action.PACKAGE_INSTALL" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <action android:name="android.intent.action.PACKAGE_RESTARTED" />
+            </intent-filter>
+        </receiver>
+    </application>
+
 </manifest>
