--- a/solshen-install-history-test/AndroidManifest.xml
+++ b/solshen-install-history-test/AndroidManifest.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.solshen.install.history.test"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="10" />
-    <instrumentation android:targetPackage="com.solshen.install.history" android:name="android.test.InstrumentationTestRunner" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+<manifest
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.solshen.install.history.test"
+  android:sharedUserId="solshen.user"
+  android:versionCode="1"
+  android:versionName="1.0">
+  <uses-sdk
+    android:minSdkVersion="10" />
+  <instrumentation
+    android:targetPackage="com.solshen.install.history"
+    android:name="android.test.InstrumentationTestRunner" />
+  <application
+    android:icon="@drawable/icon"
+    android:label="@string/app_name">
 
-    <uses-library android:name="android.test.runner" />
-    </application>
+    <uses-library
+      android:name="android.test.runner" />
+  </application>
 </manifest>
