--- a/solshen-install-history/AndroidManifest.xml
+++ b/solshen-install-history/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.solshen.install.history"
+    android:sharedUserId="solshen.user"
     android:versionCode="1"
     android:versionName="1.0" >
 
