--- a/solshen-install-history-test/.classpath
+++ b/solshen-install-history-test/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/solshen-install-history"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
