--- a/solshen-install-history/AndroidManifest.xml
+++ b/solshen-install-history/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:smallScreens="false"
         android:xlargeScreens="true" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
